--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
 }
 
 repositories {
@@ -49,6 +53,10 @@ dependencies {
 
     // random_string_util
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+    // log4j
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
 }
 
 tasks.named('test') {
