--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     // log4j
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
+
+    // AWS SES (Mail)
+    implementation 'com.amazonaws:aws-java-sdk-ses:1.12.332'
 }
 
 tasks.named('test') {
